--- a/ieclub-taro/index.html
+++ b/ieclub-taro/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ieclub-taro</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>IEClub - 国贸俱乐部</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <script>
+    // 注入 Taro 环境变量
+    window.__TARO_ENV = 'h5';
+  </script>
+</head>
+<body>
+  <div id="app"></div>
+</body>
 </html>
