--- a/ieclub-web/index.html
+++ b/ieclub-web/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="IEClub - 创造线上线下交互的无限可能" />
-    <meta name="keywords" content="学习,科研,创业,社区,交流" />
-    <title>IEClub - 学习·科研·创业社区</title>
+    <meta name="keywords" content="学习,科研,项目,创业,社区,交流" />
+    <title>IEClub - 学习·科研·项目·创业社区</title>
   </head>
   <body>
     <div id="root"></div>
