[PRE-DEPLOY] 响应式UI优化和PWA修复

--- a/ieclub-web/index.html
+++ b/ieclub-web/index.html
@@ -17,7 +17,8 @@
     <meta property="og:description" content="学习·科研·项目·创业" />
     
     <!-- PWA Support -->
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="IEClub" />
