[PRE-DEPLOY] 更新说明

--- a/ieclub-web/index.html
+++ b/ieclub-web/index.html
@@ -16,8 +16,7 @@
     <meta property="og:title" content="IEClub" />
     <meta property="og:description" content="学习·科研·项目·创业" />
     
-    <!-- PWA Support -->
-    <link rel="manifest" href="/manifest.json" />
+    <!-- PWA Support - manifest由vite-plugin-pwa自动注入 -->
     <link rel="apple-touch-icon" href="/icon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
